# codeburn-rs

./: .gitignore  Cargo.toml  README.md  add_license.py  bench.sh  perf-bench.sh
.github/workflows/: release.yml
src/: bash_utils.rs  classifier.rs  cli.rs  config.rs  currency.rs  discovery_cache.rs  export.rs  format.rs  main.rs  menubar.rs  models.rs  output_cache.rs  parser.rs  report_cache.rs  session_cache.rs  types.rs
src/providers/: claude.rs  codex.rs  common.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs  pi.rs
src/tui/: fs_watcher.rs  layout.rs  mod.rs  widgets.rs
src/tui/widgets/: aggregate.rs  bar.rs  chrome.rs  dashboard.rs  panel.rs  theme.rs
src/tui/widgets/panels/: activity.rs  bar_list.rs  calls.rs  daily.rs  mod.rs  model.rs  project.rs
