[package]
name = "codeburn"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
csv = "1.3"
unicode-width = "0.2"
regex = "1"
once_cell = "1"
lru = "0.12"
dashmap = "6"
anyhow = "1"
memmap2 = "0.9"
memchr = "2"
simd-json = "0.14"
aho-corasick = "1"
rustc-hash = "2"
bincode = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
