[package]
name = "cburn"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A fast Rust rewrite of codeburn - ai token usage analysis with a TUI."
repository = "https://github.com/rossnoah/codeburn-rs"
homepage = "https://github.com/rossnoah/codeburn-rs"
readme = "README.md"

[[bin]]
name = "cburn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
dashmap = "6"
anyhow = "1"
memmap2 = "0.9"
memchr = "2"
simd-json = "0.14"
aho-corasick = "1"
rustc-hash = "2"
bincode = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "rossnoah/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Customize the Homebrew formula name
formula = "cburn"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
